テストプッシュ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	<h1>Gitの練習</h1>
 	<p>Gitを練習して1っかい切り替えてます</p>
+	<p>pushの練習</p>
 
 </body>
-<script>	window.alert("test");</script>
+<script>window.alert("test");</script>
 </html>
