--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>Gitの練習</h1>
 	<p>Gitを練習して1っかい切り替えてます</p>
-	<p>pushの練習</p>
+	<p>pullの練習</p>
 
 </body>
 <script>window.alert("test");</script>
